# better_budget_tracker

./: .gitignore  README.md  index.html  package.json  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  seed.py  services.py
app/routers/: auth.py  dashboard.py
docs/: ARCHITECTURE.md  PLAN.md
src/: App.jsx  main.jsx
src/components/: Dashboard.jsx  Login.jsx  MonthlyOverview.jsx  TransactionForm.jsx  TransactionTable.jsx  YearlyProjection.jsx
src/context/: BudgetContext.jsx
src/styles/: global.css
